--- a/UIwpf/App.xaml
+++ b/UIwpf/App.xaml
@@ -9,7 +9,12 @@
             <Setter Property="Background"               Value="#FF5AE9A3"/>
                 <Setter Property="FontWeight"               Value="Bold" />
             </Style>
-            <Style x:Key="myTextBlockStyle"            TargetType="TextBlock">
+        <Style x:Key="myButtonStyle1"            TargetType="Button">
+            <Setter Property="FontFamily"               Value="Ink Free" />
+            <Setter Property="Background"               Value="#FFFACCAE"/>
+            <Setter Property="FontWeight"               Value="Bold" />
+        </Style>
+        <Style x:Key="myTextBlockStyle"            TargetType="TextBlock">
                 <Setter Property="FontSize"               Value="16" />
                 <Setter Property="Foreground"               Value="blue"/>
                 <Setter Property="FontFamily"               Value="Ink Free" />
